-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.1.0, Qt Creator 2.3.0-beta
-
None
-
d8fdd0acdc59a02788c23b18680b47da51cf1c56
On line like "foo, bar,"
command :.s/,/()/g causes infinite recursion and creator hangup.
| For Gerrit Dashboard: QTCREATORBUG-5697 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 2562,1 | fakevim: fix endless loop in certain search&replace operations | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 2574,1 | fakevim: fix endless loop in certain search&replace operations | 2.3 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |