fakevim: fix endless loop in certain search&replace operations

Task-number: QTCREATORBUG-5697
Change-Id: I25e9ef4ef042efa2b4dd670f5177e5e170fbaaf0
(cherry picked from commit d8fdd0acdc59a02788c23b18680b47da51cf1c56)
Reviewed-on: http://codereview.qt.nokia.com/2574
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>